--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Hello</h1>
+	<header class="bg-light text-center mb-4 p-3">
+		<img style="width: 10%;height: 10%;" src="./assets/img/logo.png" alt="logo of doggy">
+	</header>
+
+	<div class="container">
+		<form id="pet-forms">
+			<div class="form-group">
+				<label for="animal"></label>
+				<select id="animal" class="form-control form-control-lg mb-3">
+					<option value="cat">Cat</option>
+					<option value="dog">Dog</option>
+					<option value="bird">Bird</option>
+					<option value="barnyard">Barnyard</option>
+				</select>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
