--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 	<div class="container">
 		<form id="pet-forms">
 			<div class="form-group">
-				<label for="animal"></label>
+				<label for="animal">Animal</label>
 				<select id="animal" class="form-control form-control-lg mb-3">
-					<option value="cat">Cat</option>
 					<option value="dog">Dog</option>
+					<option value="cat">Cat</option>
 					<option value="bird">Bird</option>
 					<option value="barnyard">Barnyard</option>
 				</select>
+				<input type="text" id="zip" class="form-control form-control-lg" placeholder="Enter your zipcode">
+				<input type="submit" value="Find" class="btn btn-dark btn-lg btn-block mt-3">
 			</div>
 		</form>
 	</div>
