--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 				<input type="submit" value="Find" class="btn btn-dark btn-lg btn-block mt-3">
 			</div>
 		</form>
+
+		<div id="results"></div>
 	</div>
+
+<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
