--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</header>
 
 	<div class="container">
-		<form id="pet-forms">
+		<form id="pet-form">
 			<div class="form-group">
 				<label for="animal">Animal</label>
 				<select id="animal" class="form-control form-control-lg mb-3">
